--- a/index.html
+++ b/index.html
@@ -357,7 +357,21 @@
       </select>
     </div>
   </div>
+            <!-- Rujukan Surat (NEW) -->
+      <div class="divider"></div>
+        <h4><i class="fas fa-file-alt"></i> Rujukan Surat Permohonan</h4>
 
+      <div class="form-row two-col">
+    <  div class="form-group">
+        <label>No. Rujukan Surat Pemohon *</label>
+        <input id="noRujSuratPemohon_a" class="form-control" placeholder="Contoh: JPN.PHG(S)1000/12/2/Jld.5" />
+        </div>
+      <div class="form-group">
+      <label>Tarikh Surat Pemohon *</label>
+      <input id="tarikhSuratPemohon_a" class="form-control" type="date" />
+      </div>
+    </div>
+  </form>
   <div class="divider"></div>
   <h4><i class="fas fa-user"></i> Maklumat Pemohon (Pegawai Agensi)</h4>
 
@@ -603,3 +617,4 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
