--- a/index.html
+++ b/index.html
@@ -186,61 +186,145 @@
             </form>
 
             <!-- ========== BORANG PREMIS ========== -->
-            <form id="form-premis" class="form-category">
-              <h3><i class="fas fa-building"></i> Permohonan — Premis</h3>
-              
-              <div class="form-row">
-                <div class="form-group">
-                  <label>Kod Sekolah *</label>
-                  <input id="kodSekolah_p" class="form-control" placeholder="Contoh: CBA0001" />
-                </div>
-              </div>
+<form id="form-premis" class="form-category">
+  <h3><i class="fas fa-building"></i> Permohonan — Premis</h3>
+  
+  <!-- Section 1: Maklumat Sekolah -->
+  <div class="form-row">
+    <div class="form-group">
+      <label>Kod Sekolah *</label>
+      <input id="kodSekolah_p" class="form-control" placeholder="Contoh: CBA0001" />
+    </div>
+  </div>
 
-              <div class="form-row">
-                <div class="form-group">
-                  <label>Nama Sekolah</label>
-                  <input id="namaSekolah_p" class="form-control" readonly placeholder="(Akan diisi automatik)" />
-                </div>
-              </div>
+  <div class="form-row">
+    <div class="form-group">
+      <label>Nama Sekolah</label>
+      <input id="namaSekolah_p" class="form-control" readonly placeholder="(Akan diisi automatik)" />
+    </div>
+  </div>
 
-              <div class="form-row">
-                <div class="form-group">
-                  <label>Nama Pemilik Premis *</label>
-                  <input id="pemilikPremis_p" class="form-control" placeholder="Nama pemilik premis" />
-                </div>
-              </div>
+  <div class="form-row two-col">
+    <div class="form-group">
+      <label>Daerah</label>
+      <input id="daerah_p" class="form-control" readonly placeholder="(Akan diisi automatik)" />
+    </div>
+    <div class="form-group">
+      <label>Peringkat</label>
+      <input id="peringkat_p" class="form-control" readonly placeholder="(Akan diisi automatik)" />
+    </div>
+  </div>
 
-              <div class="form-row">
-                <div class="form-group">
-                  <label>Alamat Premis *</label>
-                  <input id="alamatPremis_p" class="form-control" placeholder="Alamat premis" />
-                </div>
-              </div>
+  <div class="form-row">
+    <div class="form-group">
+      <label>Jawatan Ketua Sekolah *</label>
+      <select id="jawatanKetua_p" class="form-control">
+        <option value="">-- Pilih --</option>
+        <option value="PENGETUA">PENGETUA</option>
+        <option value="GURU BESAR">GURU BESAR</option>
+        <option value="PENGARAH">PENGARAH</option>
+      </select>
+    </div>
+  </div>
 
-              <div class="form-row">
-                <div class="form-group">
-                  <label>Tujuan / Butiran *</label>
-                  <textarea id="butiranPremis_p" class="form-control" rows="4" placeholder="Butiran ringkas"></textarea>
-                </div>
-              </div>
+  <div class="divider"></div>
+  <h4><i class="fas fa-user"></i> Maklumat Pemohon</h4>
 
-              <div class="divider"></div>
-              <h4><i class="fas fa-user"></i> Maklumat Penghubung</h4>
+  <div class="form-row">
+    <div class="form-group">
+      <label>Nama Pemohon *</label>
+      <input id="namaPemohon_p" class="form-control" placeholder="Nama pemohon" />
+    </div>
+  </div>
 
-              <div class="form-row">
-                <div class="form-group">
-                  <label>Nama Penghubung *</label>
-                  <input id="namaPenghubung_p" class="form-control" placeholder="Nama pegawai / guru" />
-                </div>
-              </div>
+  <div class="form-row">
+    <div class="form-group">
+      <label>Alamat Baris 1 *</label>
+      <input id="alamatBaris1_p" class="form-control" placeholder="Alamat baris 1" />
+    </div>
+  </div>
 
-              <div class="form-row">
-                <div class="form-group">
-                  <label>Email Penghubung *</label>
-                  <input id="emailPenghubung_p" class="form-control" type="email" placeholder="email@example.com" />
-                </div>
-              </div>
-            </form>
+  <div class="form-row">
+    <div class="form-group">
+      <label>Alamat Baris 2</label>
+      <input id="alamatBaris2_p" class="form-control" placeholder="Alamat baris 2" />
+    </div>
+  </div>
+
+  <div class="form-row two-col">
+    <div class="form-group">
+      <label>Poskod *</label>
+      <input id="poskod_p" class="form-control" placeholder="Poskod" />
+    </div>
+    <div class="form-group">
+      <label>Negeri *</label>
+      <input id="negeri_p" class="form-control" placeholder="Negeri" />
+    </div>
+  </div>
+
+  <div class="divider"></div>
+  <h4><i class="fas fa-clipboard-list"></i> Maklumat Permohonan</h4>
+
+  <div class="form-row">
+    <div class="form-group">
+      <label>Tajuk Surat *</label>
+      <input id="tajukSurat_p" class="form-control" placeholder="Tajuk surat permohonan" />
+    </div>
+  </div>
+
+  <div class="form-row two-col">
+    <div class="form-group">
+      <label>No. Rujukan Surat *</label>
+      <input id="noRujSurat_p" class="form-control" placeholder="No. rujukan" />
+    </div>
+    <div class="form-group">
+      <label>Tarikh Surat *</label>
+      <input id="tarikhSurat_p" class="form-control" type="date" />
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group">
+      <label>Nama Fasiliti *</label>
+      <select id="namaFasiliti_p" class="form-control">
+        <option value="">-- Pilih Fasiliti --</option>
+        <option value="BILIK DARJAH">BILIK DARJAH</option>
+        <option value="DEWAN">DEWAN</option>
+        <option value="GELANGGANG PERMAINAN">GELANGGANG PERMAINAN</option>
+        <option value="PADANG">PADANG</option>
+        <option value="ASRAMA">ASRAMA</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group">
+      <label>Tarikh Program Laksana *</label>
+      <input id="tarikhLaksana_p" class="form-control" type="date" />
+    </div>
+  </div>
+
+  <div class="divider"></div>
+  <h4><i class="fas fa-phone"></i> Maklumat Penghubung</h4>
+
+  <div class="form-row">
+    <div class="form-group">
+      <label>Nama Penghubung *</label>
+      <input id="namaPenghubung_p" class="form-control" placeholder="Nama untuk dihubungi" />
+    </div>
+  </div>
+
+  <div class="form-row two-col">
+    <div class="form-group">
+      <label>Email Penghubung *</label>
+      <input id="emailPenghubung_p" class="form-control" type="email" placeholder="email@example.com" />
+    </div>
+    <div class="form-group">
+      <label>Telefon Penghubung *</label>
+      <input id="telefonPenghubung_p" class="form-control" placeholder="0123456789" />
+    </div>
+  </div>
+</form>
 
             <!-- ========== BORANG AGENSI ========== -->
             <form id="form-agensi" class="form-category">
@@ -618,6 +702,7 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
 
 
 
