--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <input id="jawatanPenceramah_k" class="form-control" placeholder="Jawatan penceramah" />
                   </div>
                 </div>
-              </div>>
+              </div>
 
               <div class="divider"></div>
               <h4><i class="fas fa-user"></i> Maklumat Penghubung</h4>
@@ -733,6 +733,7 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
 
 
 
