--- a/index.html
+++ b/index.html
@@ -693,6 +693,9 @@
         <p class="card-desc">Kenamaan & Penggunaan Premis</p>
         <p class="card-subtitle">Mengundang Orang Kenamaan & Penggunaan Premis Oleh Pihak Luar</p>
         <div class="card-actions">
+          <button class="btn-view" onclick="viewFileOnline('spi_bil3_2008')">
+            <i class="fas fa-eye"></i> Lihat
+          </button>
           <button class="btn-download" onclick="downloadFile('spi_bil3_2008')">
             <i class="fas fa-download"></i> Muat Turun
           </button>
@@ -708,6 +711,9 @@
         <p class="card-desc">Penggunaan Kemudahan Sekolah</p>
         <p class="card-subtitle">Penggunaan Kemudahan Sekolah Oleh Pertubuhan & Persatuan Belia</p>
         <div class="card-actions">
+          <button class="btn-view" onclick="viewFileOnline('spi_bil7_1991')">
+            <i class="fas fa-eye"></i> Lihat
+          </button>
           <button class="btn-download" onclick="downloadFile('spi_bil7_1991')">
             <i class="fas fa-download"></i> Muat Turun
           </button>
@@ -723,6 +729,9 @@
         <p class="card-desc">Kebenaran Agensi Luar</p>
         <p class="card-subtitle">Panduan Kebenaran Agensi Luar Untuk Program Di Sekolah</p>
         <div class="card-actions">
+          <button class="btn-view" onclick="viewFileOnline('spi_bil5_2018')">
+            <i class="fas fa-eye"></i> Lihat
+          </button>
           <button class="btn-download" onclick="downloadFile('spi_bil5_2018')">
             <i class="fas fa-download"></i> Muat Turun
           </button>
@@ -738,6 +747,9 @@
         <p class="card-desc">Larangan Jualan</p>
         <p class="card-subtitle">Larangan Jualan Barangan & Perkhidmatan Di Sekolah</p>
         <div class="card-actions">
+          <button class="btn-view" onclick="viewFileOnline('spi_bil12_1988')">
+            <i class="fas fa-eye"></i> Lihat
+          </button>
           <button class="btn-download" onclick="downloadFile('spi_bil12_1988')">
             <i class="fas fa-download"></i> Muat Turun
           </button>
@@ -780,6 +792,7 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
 
 
 
