--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="form-group">
             <label for="kategori"><i class="fas fa-list"></i> Kategori Permohonan</label>
             <select id="kategori" class="form-control">
-              <option value="Kenamaan">ORANG KENAMAAN</option>
+              <option value="Kenamaan">ORANG KENAMAAN/AHLI POLITIK</option>
               <option value="Agensi">AGENSI</option>
               <option value="Premis">PREMIS</option>
             </select>
@@ -1097,6 +1097,7 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
 
 
 
