--- a/index.html
+++ b/index.html
@@ -960,7 +960,26 @@
           </button>
         </div>
       </div>
+      
+     <!-- Card 5: Borang Permohonan -->
+          <div class="download-card">
+            <div class="download-icon borang">
+              <i class="fas fa-form"></i>
+            </div>
+            <h4>BORANG PERMOHONAN </h4>
+            <p class="card-desc">UNDANGAN/LAWATAN ORANG KENAMAAN/AHLI POLITIK</p>
+            <p class="card-subtitle">Borang berkaitan undangan/lawatan</p>
+            <div class="card-actions">
+              <button class="btn-view" onclick="viewFileOnline('bk_ap')">
+                <i class="fas fa-eye"></i> Lihat
+              </button>
+              <button class="btn-download" onclick="downloadFile('bk_ap')">
+                <i class="fas fa-download"></i> Muat Turun
+              </button>
+            </div>
+          </div>
 
+      
     </div>
 
     <!-- CONTACT BOX -->
@@ -1097,6 +1116,7 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
 
 
 
