--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
      <!-- Card 5: Borang Permohonan -->
           <div class="download-card">
             <div class="download-icon borang">
-              <i class="fas fa-file-alt"></i>
+              <i class="fas fa-file-alt style="color:#6f42c1;""></i>
             </div>
             <h4>BORANG PERMOHONAN </h4>
             <p class="card-desc">UNDANGAN/LAWATAN ORANG KENAMAAN/AHLI POLITIK</p>
@@ -1116,6 +1116,7 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
 
 
 
