--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="tab-container">
     <div class="tabs">
       <button class="tab-btn active" data-tab="sekolah">
-        <i class="fas fa-school"></i> SEKOLAH
+        <i class="fas fa-clipboard-list"></i> PERMOHONAN
       </button>
       <button class="tab-btn" data-tab="pegawai">
         <i class="fas fa-user-tie"></i> PEGAWAI
@@ -666,7 +666,9 @@
 
           <div class="semak-form">
             <div class="form-group">
-              <label><i class="fas fa-school"></i> Kod Sekolah</label>
+              <label title="Masukkan Kod Sekolah untuk lihat semua permohonan, atau Request ID untuk satu permohonan">
+                <i class="fas fa-question-circle"></i> Kod Sekolah / Request ID
+              </label>
               <input 
                   id="semakKodSekolah" 
                   class="form-control" 
@@ -1106,6 +1108,7 @@
   <script src="js/download.js"></script>
 </body>
 </html>
+
 
 
 
