--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                   <input id="poskod_p" class="form-control" placeholder="Poskod" />
                 </div>
                 <div class="form-group">
-                  <label>Negeri *</label>
-                  <input id="negeri_p" class="form-control" placeholder="Negeri" />
+                  <label>Daerah *</label>
+                  <input id="negeri_p" class="form-control" placeholder="Contoh: Kuantan" />
                 </div>
               </div>
             
@@ -1162,6 +1162,7 @@
 
 </body>
 </html>
+
 
 
 
