--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             
               <div class="form-row">
                 <div class="form-group">
-                  <label>Alamat Baris 2</label>
+                  <label>Alamat Baris 2 *</label>
                   <input id="alamatBaris2_p" class="form-control" placeholder="PSJ DAMANSARA" required />
                 </div>
               </div>
@@ -1162,6 +1162,7 @@
 
 </body>
 </html>
+
 
 
 
